--- a/app/src/main/res/layout/layout_search_header.xml
+++ b/app/src/main/res/layout/layout_search_header.xml
@@ -1,22 +1,33 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout android:layout_width="match_parent"
-    android:layout_height="36dp"
-    android:orientation="horizontal"
-    android:gravity="center"
-    android:layout_centerVertical="true"
-    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <ImageView
-        android:id="@+id/ic_search"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:background="@drawable/ic_close" />
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <TextView
-        android:layout_toRightOf="@+id/ic_search"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:text="나우님, 어떤 여행을 찾고 계세요?" />
-</RelativeLayout>
+    <data>
+
+        <variable
+            name="main"
+            type="com.hotelnow.activity.MainActivity" />
+    </data>
+
+    <RelativeLayout android:layout_width="match_parent"
+        android:layout_height="36dp"
+        android:orientation="horizontal"
+        android:gravity="center"
+        android:layout_centerVertical="true">
+
+        <ImageView
+            android:id="@+id/ic_search"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:background="@drawable/ic_close" />
+
+        <TextView
+            android:id="@+id/txt_search"
+            android:layout_toRightOf="@+id/ic_search"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_centerVertical="true"
+            android:text="나우님, 어떤 여행을 찾고 계세요?" />
+    </RelativeLayout>
+</layout>
