--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -2,11 +2,12 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item
-        android:icon="@drawable/ico_bnb_home"
+    <item android:icon="@drawable/ico_bnb_home"
         android:title="홈" />
     <item android:title="관심상품"
         android:icon="@drawable/ico_bnb_favorite"/>
-    <item android:title="예약내역" android:icon="@drawable/ico_bnb_rsvlist"/>
-    <item android:title="내정보" android:icon="@drawable/ico_bnb_mypage"/>
+    <item android:title="예약내역"
+        android:icon="@drawable/ico_bnb_rsvlist"/>
+    <item android:title="내정보"
+        android:icon="@drawable/ico_bnb_mypage"/>
 </menu>
