--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,21 @@
     <color name="colorActionMode">#353C50</color>
     <color name="colorAccent">#F8A018</color>
     <color name="background">#FAFAFA</color>
+
+
+<!--테스트-->
+    <color name = "darkBlue">#110f63</color>
+    <color name = "blue">#221f80</color>
+    <color name = "lightBlue">#28349a</color>
+    <color name = "whiteBlue">#5a5cae</color>
+
+    <color name = "darkGreen">#008425</color>
+    <color name = "green">#35a031</color>
+    <color name = "lightGreen">#4fc543</color>
+    <color name = "whiteGreen">#9cd78b</color>
+
+    <color name = "darkGray">#434343</color>
+    <color name = "gray">#737373</color>
+    <color name = "lightGray">#a7a7a7</color>
+    <color name = "whiteGray">#cecece</color>
 </resources>
