--- a/app/src/main/res/layout/layout_banner.xml
+++ b/app/src/main/res/layout/layout_banner.xml
@@ -2,15 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    >
+    android:layout_height="wrap_content">
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="ggggg"/>
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/inner_recyclerView"
+
+    <com.hotelnow.utils.ViewPagerCustom
+        android:id="@+id/autoViewPager"
         android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+        android:layout_height="206dp" />
 
 </LinearLayout>
