--- a/app/src/main/res/layout/vertical.xml
+++ b/app/src/main/res/layout/vertical.xml
@@ -5,7 +5,10 @@
     android:layout_margin="10dp"
      android:orientation="vertical"
     >
-
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="sssssss"/>
     <android.support.v7.widget.RecyclerView
         android:id="@+id/inner_recyclerView"
         android:layout_width="match_parent"
