--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -23,8 +23,8 @@
             <android.support.design.widget.CollapsingToolbarLayout
                 android:id="@+id/toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="?attr/actionBarSize"
-                android:background="@color/darkBlue"
+                android:layout_height="40dp"
+                android:background="@drawable/style_top_bar"
                 app:layout_scrollFlags="scroll|enterAlways" >
 
                 <include
@@ -38,8 +38,12 @@
                 android:id="@+id/tab_layout"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:background="@color/white"
+                app:tabTextColor="@color/unselecttab"
+                app:tabSelectedTextColor="@color/selecttab"
+                app:tabIndicatorColor="@color/purpletxt"
                 app:tabMode="fixed"
-                app:tabGravity="fill"/>
+                app:tabGravity="fill" />
 
         </android.support.design.widget.AppBarLayout>
 
@@ -48,7 +52,8 @@
             android:id="@+id/screen_container"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+            app:layout_behavior="@string/appbar_scrolling_view_behavior"
+            android:background="@color/bg_background"/>
 
         <com.ittianyu.bottomnavigationviewex.BottomNavigationViewEx
             android:id="@+id/navigation"
