--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -1,6 +1,4 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app = "http://schemas.android.com/apk/res-auto"
-	xmlns:tools = "http://schemas.android.com/tools">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<data>
 		<variable
@@ -8,10 +6,9 @@
 			type="com.hotelnow.fragment.home.HomeFragment" />
 	</data>
 
-		<android.support.v7.widget.RecyclerView
-			android:id = "@+id/recycler_view"
-			android:layout_width = "match_parent"
-			android:layout_height = "match_parent"
-			android:clipToPadding = "false"
-			android:padding = "10dp"/>
+	<android.support.v7.widget.RecyclerView
+		android:id = "@+id/recycler_view"
+		android:layout_width = "match_parent"
+		android:layout_height = "match_parent"
+		android:clipToPadding = "false" />
 </layout>
