--- a/app/src/main/res/layout/layout_search_header.xml
+++ b/app/src/main/res/layout/layout_search_header.xml
@@ -10,23 +10,27 @@
     </data>
 
     <RelativeLayout android:layout_width="match_parent"
-        android:layout_height="36dp"
+        android:layout_height="40dp"
         android:orientation="horizontal"
         android:gravity="center"
         android:layout_centerVertical="true">
 
         <ImageView
             android:id="@+id/ic_search"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="18dp"
+            android:layout_height="18dp"
             android:layout_centerVertical="true"
-            android:background="@drawable/ic_close" />
+            android:background="@drawable/ico_top_search"
+            android:layout_marginLeft="16dp"/>
 
         <TextView
             android:id="@+id/txt_search"
             android:layout_toRightOf="@+id/ic_search"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="8dp"
+            android:textColor="@color/white"
+            android:textSize="15dp"
             android:layout_centerVertical="true"
             android:text="나우님, 어떤 여행을 찾고 계세요?" />
     </RelativeLayout>
