--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -26,4 +26,22 @@
         <item name="colorAccent">@color/colorAccent</item>
     </style>
 
+    <style name="TitleText" >
+        <item name="android:textSize">15dp</item>
+        <item name="android:textColor">@color/blacktxt</item>
+        <item name="android:layout_marginTop">23dp</item>
+        <item name="android:layout_marginLeft">16dp</item>
+        <item name="android:layout_marginBottom">3dp</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="MoreText" >
+        <item name="android:textSize">12dp</item>
+        <item name="android:textColor">@color/graytxt</item>
+        <item name="android:text">@string/more_txt</item>
+        <item name="android:layout_marginTop">26dp</item>
+        <item name="android:layout_marginBottom">3dp</item>
+        <item name="android:layout_marginRight">16dp</item>
+    </style>
+
 </resources>
