--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,13 +11,13 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="false"
-        tools:context="com.hotelnow.activity.MainActivity">
-
+        tools:context="com.hotelnow.activity.MainActivity" >
 
         <android.support.design.widget.AppBarLayout
             android:id="@+id/appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/white"
             android:theme="@style/AppTheme.AppBarOverlay">
 
             <android.support.design.widget.CollapsingToolbarLayout
@@ -40,8 +40,8 @@
                 android:layout_height="wrap_content"
                 android:background="@color/white"
                 app:tabTextColor="@color/unselecttab"
-                app:tabSelectedTextColor="@color/selecttab"
-                app:tabIndicatorColor="@color/purpletxt"
+                app:tabSelectedTextColor="@color/purple"
+                app:tabIndicatorColor="@color/purple"
                 app:tabMode="fixed"
                 app:tabGravity="fill" />
 
@@ -60,6 +60,9 @@
             android:layout_width="match_parent"
             android:layout_height="56dp"
             android:layout_gravity="bottom|end"
+            android:background="@color/white"
+            app:itemTextColor="@color/select_state_button"
+            app:itemIconTint="@color/select_state_button"
             app:menu="@menu/nav_items"
             app:layout_behavior="com.hotelnow.utils.BottomNavigationBehavior"/>
 
