--- a/app/src/main/res/layout/layout_search_header.xml
+++ b/app/src/main/res/layout/layout_search_header.xml
@@ -13,7 +13,8 @@
         android:layout_height="40dp"
         android:orientation="horizontal"
         android:gravity="center"
-        android:layout_centerVertical="true">
+        android:layout_centerVertical="true"
+        android:background="@android:color/transparent">
 
         <ImageView
             android:id="@+id/ic_search"
