--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,7 +12,7 @@
     <color name="white">#ffffff</color>
     <color name="unselecttab">#999999</color>
     <color name="bg_background">#dedee3</color>
-
+    <color name="purple_19">#194d267f</color>
 
 
 <!--테스트-->
