--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -6,9 +6,19 @@
 			type="com.hotelnow.fragment.home.HomeFragment" />
 	</data>
 
+<LinearLayout
+	android:layout_width="match_parent"
+	android:layout_height="match_parent"
+	android:orientation="vertical">
+	<Button
+		android:id="@+id/bt_test"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content" />
+
 	<android.support.v7.widget.RecyclerView
 		android:id = "@+id/recycler_view"
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
 		android:clipToPadding = "false" />
+</LinearLayout>
 </layout>
