--- a/app/src/main/res/drawable/calendar_text_selector.xml
+++ b/app/src/main/res/drawable/calendar_text_selector.xml
@@ -7,5 +7,8 @@
   <item app:tsquare_state_current_month="false" android:color="#fff"/>
   <item app:tsquare_state_highlighted="true" android:state_selected="true" android:color="#7ffefeff" />
   <item app:tsquare_state_selectable="false" android:color="#7ffefeff" />
+  <item app:tsquare_state_sun="true" app:tsquare_state_highlighted="false" android:color="#d21e1e" />
+  <item app:tsquare_state_sat="true" app:tsquare_state_highlighted="false" android:color="#135eb4" />
+
   <item android:color="#212121"/>
 </selector>
