--- a/calendar_lib/src/main/res/layout/month.xml
+++ b/calendar_lib/src/main/res/layout/month.xml
@@ -22,6 +22,7 @@
     <com.savvi.rangedatepicker.CalendarRowView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:visibility="gone"
         >
       <TextView
           android:layout_width="wrap_content"
