--- a/calendar_lib/src/main/res/values/colors.xml
+++ b/calendar_lib/src/main/res/values/colors.xml
@@ -18,7 +18,7 @@
   <color name="dateTimeRangePickerStateNonSelectable">@android:color/white</color>
   <color name="dateTimeRangePickerStateToday">#ffcf40</color>
   <color name="dateTimeRangePickerHeaderTextColor">@android:color/black</color>
-  <color name="dateTimeRangePickerTitleTextColor">@android:color/black</color>
+  <color name="dateTimeRangePickerTitleTextColor">#4d267f</color>
   <color name="dateTimeRangePickerRangeTextColorActive">@android:color/white</color>
   <color name="dateTimeRangePickerRangeTextColorInactive">#B9B9B9</color>
 </resources>
