--- a/calendar_lib/src/main/res/values/styles.xml
+++ b/calendar_lib/src/main/res/values/styles.xml
@@ -1,8 +1,9 @@
 <!-- Copyright 2012 Square, Inc. -->
 <resources xmlns:tools="http://schemas.android.com/tools">
   <style name="CalendarTitle">
-    <item name="android:textSize">@dimen/calendar_text_large</item>
     <item name="android:textStyle">bold</item>
+    <item name="android:textSize">21dp</item>
+    <item name="android:textColor">#4d267f</item>
   </style>
 
   <style name="CalendarCell">
@@ -17,6 +18,6 @@
   </style>
 
   <style name="CalendarCell.CalendarDate">
-    <item name="android:textSize">@dimen/calendar_text_medium</item>
+    <item name="android:textSize">17dp</item>
   </style>
 </resources>
