--- a/app/src/main/res/layout/fragment_favorite.xml
+++ b/app/src/main/res/layout/fragment_favorite.xml
@@ -1,10 +1,9 @@
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-	xmlns:app="http://schemas.android.com/apk/res-auto">
+<layout xmlns:android="http://schemas.android.com/apk/res/android">
 
 	<data>
 		<variable
-			name="home"
-			type="com.hotelnow.fragment.home.HomeFragment" />
+			name="favorite"
+			type="com.hotelnow.fragment.favorite.FavoriteFragment" />
 	</data>
 
 <LinearLayout
@@ -20,7 +19,6 @@
 		android:id = "@+id/recycler_view"
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
-		android:clipToPadding = "false"
-		app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
+		android:clipToPadding = "false" />
 </LinearLayout>
 </layout>
