--- a/app/src/main/res/layout/layout_vertical.xml
+++ b/app/src/main/res/layout/layout_vertical.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <data>
-        <variable
-            name="vertival"
-            type="com.hotelnow.fragment.home.HomeFragment" />
-    </data>
+    <!--<data>-->
+        <!--<variable-->
+            <!--name="vertival"-->
+            <!--type="com.hotelnow.fragment.home.HomeFragment" />-->
+    <!--</data>-->
 
     <LinearLayout
         android:layout_width="match_parent"
