--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
 	android:layout_width="match_parent"
 	android:layout_height="match_parent"
 	android:orientation="vertical">
+
 	<Button
 		android:id="@+id/bt_test"
 		android:layout_width="match_parent"
@@ -21,6 +22,7 @@
 		android:layout_width = "match_parent"
 		android:layout_height = "match_parent"
 		android:clipToPadding = "false"
+		android:overScrollMode="never"
 		app:layoutManager="android.support.v7.widget.LinearLayoutManager"/>
 </LinearLayout>
 </layout>
