--- a/app/src/main/res/layout/layout_horizontal.xml
+++ b/app/src/main/res/layout/layout_horizontal.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tool="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!--<data>-->
         <!--<variable-->
@@ -11,7 +13,8 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:background="@color/white">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -21,9 +24,9 @@
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ㅎㅎㅎㅎㅎ"
                 style="@style/TitleText"
-                android:layout_toLeftOf="@id/all_view"/>
+                android:layout_toLeftOf="@id/all_view"
+                tools:text="ㅎㅎㅎㅎㅎ"/>
 
             <TextView
                 android:id="@+id/all_view"
@@ -36,9 +39,15 @@
         <android.support.v7.widget.RecyclerView
             android:id="@+id/inner_recyclerView"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:overScrollMode="never"/>
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="7dp"
+            android:background="@color/back_line"/>
 
     </LinearLayout>
 </layout>
