--- a/app/src/main/res/layout/layout_theme_item.xml
+++ b/app/src/main/res/layout/layout_theme_item.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="290dp"
-    android:layout_height="254dp"
+    android:layout_width="154dp"
+    android:layout_height="wrap_content"
     android:layout_marginRight="10dp"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical">
 
     <RelativeLayout
-        android:layout_width="290dp"
+        android:layout_width="154dp"
         android:layout_height="wrap_content">
 
         <ImageView
             android:id="@+id/iv_image"
-            android:layout_width="290dp"
-            android:layout_height="150dp"
+            android:layout_width="154dp"
+            android:layout_height="90dp"
             android:scaleType="fitXY" />
 
         <ImageView
@@ -32,53 +32,13 @@
         android:layout_marginTop="12dp"
         android:orientation="vertical">
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="left|center_vertical"
-            android:orientation="horizontal">
-
-            <ImageView
-                android:layout_width="10dp"
-                android:layout_height="10dp"
-                android:layout_marginLeft="16dp"
-                android:background="@drawable/ico_starpoint"/>
-
-            <TextView
-                android:id="@+id/tv_score"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="left|center_vertical"
-                android:layout_marginLeft="2dp"
-                android:textSize="14dp"
-                android:background="@color/white"
-                android:textColor="@color/blacktxt"
-                tools:text="3.3" />
-
-            <TextView
-                android:layout_width="1dp"
-                android:layout_height="match_parent"
-                android:layout_marginLeft="8dp"
-                android:background="@color/textbar"/>
-
-            <TextView
-                android:id="@+id/tv_catagory"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="8dp"
-                android:textSize="11dp"
-                android:background="@color/white"
-                android:textColor="@color/blacktxt"
-                tools:text="특2급" />
-        </LinearLayout>
-
         <TextView
             android:id="@+id/tv_hotelname"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="5dp"
-            android:textSize="15dp"
+            android:textSize="13dp"
             android:background="@color/white"
             android:textColor="@color/blacktxt"
             tools:text="L7 홍대 바이 롯데" />
@@ -94,7 +54,8 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="16dp"
-                android:textSize="16dp"
+                android:layout_gravity="left|bottom"
+                android:textSize="14dp"
                 android:background="@color/white"
                 android:textColor="@color/blacktxt"
                 tools:text="205,700" />
@@ -102,9 +63,9 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:gravity="left|center_vertical"
+                android:layout_gravity="left|bottom"
                 android:layout_marginLeft="2dp"
-                android:textSize="12dp"
+                android:textSize="8dp"
                 android:background="@color/white"
                 android:textColor="@color/blacktxt"
                 tools:text="원 ~" />
