--- a/app/src/main/res/layout/layout_vertical.xml
+++ b/app/src/main/res/layout/layout_vertical.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <!--<data>-->
         <!--<variable-->
@@ -10,7 +11,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:background="@color/white">
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -20,9 +22,9 @@
                 android:id="@+id/title"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="ㅎㅎㅎㅎㅎ"
                 style="@style/TitleText"
-                android:layout_toLeftOf="@id/all_view"/>
+                android:layout_toLeftOf="@id/all_view"
+                tools:text="ㅎㅎㅎㅎㅎ"/>
 
             <TextView
                 android:id="@+id/all_view"
@@ -38,7 +40,8 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="17dp"
             android:layout_marginRight="17dp"
-            android:layout_marginTop="10dp"/>
+            android:layout_marginTop="10dp"
+            android:overScrollMode="never"/>
 
     </LinearLayout>
 </layout>
