--- a/app/src/main/res/layout/layout_activity_hotdeal_item.xml
+++ b/app/src/main/res/layout/layout_activity_hotdeal_item.xml
@@ -42,7 +42,7 @@
                 android:layout_width="10dp"
                 android:layout_height="10dp"
                 android:layout_marginLeft="16dp"
-                android:background="@drawable/ico_starpoint"/>
+                android:background="@drawable/ico_starpoint_press"/>
 
             <TextView
                 android:id="@+id/tv_score"
