--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,6 +21,7 @@
     <color name="back_line">#f0f0f5</color>
     <color name="gray_line">#a4a4b0</color>
     <color name="star_txt">#adadad</color>
+    <color name="area_result_txt">#8a8a8a</color>
 
 
 <!--테스트-->
