--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,6 +22,7 @@
     <color name="gray_line">#a4a4b0</color>
     <color name="star_txt">#adadad</color>
     <color name="area_result_txt">#8a8a8a</color>
+    <color name="redtext">#fa3336</color>
 
 
 <!--테스트-->
