--- a/app/src/main/res/layout/activity_hotel_detail.xml
+++ b/app/src/main/res/layout/activity_hotel_detail.xml
@@ -13,13 +13,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:fitsSystemWindows="true"
-        android:background="@android:color/transparent"
+        android:background="@color/white"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/collapsing_toolbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="234dp"
             android:fitsSystemWindows="true"
             android:background="@android:color/transparent"
             app:titleEnabled="false"
@@ -29,11 +29,11 @@
             <com.hotelnow.utils.ToughViewPager
                 android:id="@+id/img_pager"
                 android:layout_width="match_parent"
-                android:layout_height="262dp"
+                android:layout_height="234dp"
                 android:scaleType="centerCrop"
                 android:fitsSystemWindows="true"
-                android:background="@android:color/transparent"
-                app:layout_collapseMode="parallax"/>
+                android:background="@color/white"
+                app:layout_collapseMode="pin"/>
 
             <RelativeLayout
                 android:layout_width="match_parent"
@@ -76,7 +76,7 @@
                 android:layout_height="?attr/actionBarSize"
                 android:background="@android:color/transparent"
                 app:layout_collapseMode="pin">
-                
+
                 <RelativeLayout
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
@@ -146,17 +146,19 @@
     <android.support.v4.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior"
-        android:background="@drawable/style_detail_top">
+        android:background="@android:color/transparent"
+        android:layout_marginTop="-10dp"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical">
+            android:orientation="vertical" >
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content">
+                android:layout_height="wrap_content"
+                android:background="@drawable/style_detail_top">
 
                 <include layout="@layout/layout_detail_hotel" />
 
