--- a/app/src/main/res/layout/activity_calendar.xml
+++ b/app/src/main/res/layout/activity_calendar.xml
@@ -1,24 +1,251 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/black_two">
+
+    <RelativeLayout
+        android:id="@+id/date_area"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:focusable="true"
+        android:background="@drawable/style_detail_top"
+        android:focusableInTouchMode="true"
+        android:layout_marginTop="79dp"
+        android:orientation="vertical">
+        <RelativeLayout
+            android:id="@+id/calender_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="0.5"
+                    android:gravity="center"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="1dp"
+                            android:textSize="11dp"
+                            android:text="@string/detail_checkin_title"
+                            android:textColor="@color/area_result_txt" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/checkin_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:text="날짜 선택하기"
+                        android:clickable="true"
+                        android:textColor="@color/purple"
+                        android:textScaleX=".95"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <View
+                    android:layout_width="1dp"
+                    android:layout_height="match_parent"
+                    android:background="@color/bg_background"/>
+
+                <LinearLayout
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="5dp"
+                    android:layout_weight="0.5"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="center_vertical|center"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_marginLeft="5dp"
+                            android:layout_marginTop="1dp"
+                            android:textSize="11dp"
+                            android:text="@string/detail_checkout_title"
+                            android:textColor="@color/area_result_txt" />
+                    </LinearLayout>
+
+                    <TextView
+                        android:id="@+id/checkout_date"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:layout_marginTop="5dp"
+                        android:gravity="center"
+                        android:clickable="true"
+                        android:text="날짜 선택하기"
+                        android:textColor="@color/purple"
+                        android:textScaleX=".95"
+                        android:textSize="16dp"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerInParent="true">
+                <TextView
+                    android:id="@+id/check_inout_count"
+                    android:layout_width="wrap_content"
+                    android:layout_height="23dp"
+                    android:minWidth="37dp"
+                    android:background="@drawable/style_round_calender"
+                    android:textSize="11dp"
+                    android:gravity="center"
+                    android:textColor="@color/white"/>
+            </LinearLayout>
+        </RelativeLayout>
+        <LinearLayout
+            android:layout_below="@id/calender_title"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/bg_background"></LinearLayout>
+    </RelativeLayout>
+
+    <LinearLayout
+        android:id="@+id/tv_yoil"
+        android:layout_width="match_parent"
+        android:layout_height="38dp"
+        android:orientation="horizontal"
+        android:background="@color/white"
+        android:layout_below="@id/date_area">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="14dp"
+                android:layout_weight="1"
+                android:gravity="center"
+                android:textColor="@color/red_yoil"
+                android:text="일"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="14dp"
+                android:layout_weight="1"
+                android:textColor="@color/blacktxt"
+                android:gravity="center"
+                android:text="월"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="14dp"
+                android:layout_weight="1"
+                android:textColor="@color/blacktxt"
+                android:gravity="center"
+                android:text="화"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="14dp"
+                android:layout_weight="1"
+                android:textColor="@color/blacktxt"
+                android:gravity="center"
+                android:text="수"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="14dp"
+                android:layout_weight="1"
+                android:textColor="@color/blacktxt"
+                android:gravity="center"
+                android:text="목"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="14dp"
+                android:layout_weight="1"
+                android:textColor="@color/blacktxt"
+                android:gravity="center"
+                android:text="금"/>
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:textSize="14dp"
+                android:layout_weight="1"
+                android:textColor="@color/blue_yoil"
+                android:gravity="center"
+                android:text="토"/>
+
+        </LinearLayout>
+    </LinearLayout>
+
+    <ImageView
+        android:id="@+id/btn_back"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
+        android:background="@drawable/btn_calendar_close"
+        android:scaleType="fitXY"
+        android:layout_marginTop="63dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="20dp"/>
+
+    <LinearLayout
+        android:id="@+id/layout_complate"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:background="@color/white">
+        <Button
+            android:id="@+id/btn_complate"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp"
+            android:text="@string/calendar_complate"
+            android:background="@color/board_line"
+            android:textColor="@color/white" />
+    </LinearLayout>
+
     <com.savvi.rangedatepicker.CalendarPickerView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/calendar_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_above="@id/layout_complate"
+        android:layout_below="@id/tv_yoil"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
         android:paddingBottom="16dp"
         android:scrollbarStyle="outsideOverlay"
         android:clipToPadding="false"
+        android:background="@color/white"
         app:tsquare_dividerColor="@android:color/transparent"
         app:tsquare_headerTextColor="@android:color/transparent" />
-
-    <Button
-        android:id="@+id/get_selected_dates"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Selected Dates" />
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
