--- a/app/src/main/res/layout/layout_checkin_out.xml
+++ b/app/src/main/res/layout/layout_checkin_out.xml
@@ -7,11 +7,11 @@
     android:background="@drawable/border_shadow">
 
     <LinearLayout
+        android:id="@+id/bt_checkinout"
         android:layout_width="match_parent"
         android:layout_height="64dp"
         android:orientation="horizontal" >
         <RelativeLayout
-            android:id="@+id/bt_checkin"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
@@ -59,7 +59,6 @@
             android:layout_marginBottom="16dp"/>
 
         <RelativeLayout
-            android:id="@+id/bt_checkout"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1">
