--- a/app/src/main/res/layout/layout_horizontal.xml
+++ b/app/src/main/res/layout/layout_horizontal.xml
@@ -11,6 +11,7 @@
     <!--</data>-->
 
     <LinearLayout
+        android:id="@+id/main_view"
         android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,7 +19,8 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            android:layout_marginTop="13dp">
 
             <TextView
                 android:id="@+id/title"
