--- a/app/src/main/res/layout/layout_keyword_item.xml
+++ b/app/src/main/res/layout/layout_keyword_item.xml
@@ -4,24 +4,43 @@
     android:layout_height="95dp"
     android:layout_marginRight="10dp"
     xmlns:tools="http://schemas.android.com/tools"
-    android:orientation="vertical">
-    
-    <ImageView
-        android:id="@+id/iv_image"
-        android:layout_width="match_parent"
-        android:layout_height="59dp"
-        android:scaleType="fitXY" />
+    android:orientation="vertical"
+    android:layout_gravity="center_vertical"
+    android:layout_marginBottom="25dp">
 
-    <TextView
-        android:id="@+id/tv_keyword"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="left|center_vertical"
-        android:paddingLeft="8dp"
-        android:textSize="12dp"
-        android:background="@color/white"
-        android:textColor="@color/blacktxt"
-        tools:text="서울" />
-    
-    
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:id="@+id/iv_image"
+            android:layout_width="match_parent"
+            android:layout_height="63dp"
+            android:layout_marginTop="1dp"
+            android:scaleType="fitXY" />
+
+        <TextView
+            android:id="@+id/tv_keyword"
+            android:layout_width="match_parent"
+            android:layout_height="28dp"
+            android:gravity="left|center_vertical"
+            android:layout_below="@+id/iv_image"
+            android:paddingLeft="8dp"
+            android:textSize="12dp"
+            android:background="@color/white"
+            android:textColor="@color/blacktxt"
+            tools:text="서울" />
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:layout_below="@id/tv_keyword"
+            android:background="#14000000"/>
+
+        <ImageView
+            android:layout_width="match_parent"
+            android:layout_height="95dp"
+            android:scaleType="fitXY"
+            android:background="@drawable/background_rounding"/>
+    </RelativeLayout>
 </LinearLayout>
