--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -19,28 +19,13 @@
             <LinearLayout
                 android:id="@+id/btn_back"
                 android:layout_width="24dp"
-                android:layout_height="24dp"
+                android:layout_height="match_parent"
                 android:layout_centerVertical="true">
                 <ImageView
                     android:id="@+id/icon_back"
                     android:layout_width="18dp"
                     android:layout_height="16dp"
                     android:background="@drawable/ico_titbar_back"
-                    android:layout_gravity="center"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:id="@+id/btn_share"
-                android:layout_width="24dp"
-                android:layout_height="24dp"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="12dp"
-                android:layout_toLeftOf="@id/btn_zzim">
-                <ImageView
-                    android:id="@+id/icon_share"
-                    android:layout_width="18dp"
-                    android:layout_height="18dp"
-                    android:background="@drawable/ico_titbarw_share"
                     android:layout_gravity="center"/>
             </LinearLayout>
 
