--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -114,7 +114,7 @@
                     android:layout_height="46dp"
                     android:layout_weight="1"
                     android:textSize="15dp"
-                    android:background="@drawable/selectbox2"
+                    android:background="@drawable/style_edittext_gray_border"
                     android:spinnerMode="dropdown" />
 
                 <EditText
