--- a/app/src/main/res/layout/activity_reservation.xml
+++ b/app/src/main/res/layout/activity_reservation.xml
@@ -19,7 +19,7 @@
             <LinearLayout
                 android:id="@+id/btn_back"
                 android:layout_width="24dp"
-                android:layout_height="match_parent"
+                android:layout_height="55dp"
                 android:layout_centerVertical="true">
                 <ImageView
                     android:id="@+id/icon_back"
@@ -32,7 +32,7 @@
             <TextView
                 android:id="@+id/tv_title_bar"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
+                android:layout_height="55dp"
                 android:layout_centerVertical="true"
                 android:layout_toRightOf="@id/btn_back"
                 android:singleLine="true"
@@ -42,6 +42,12 @@
                 android:gravity="left|center"
                 android:ellipsize="end"
                 android:text="@string/reservation_title" />
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="@color/bg_background"
+                android:layout_below="@id/tv_title_bar"/>
         </RelativeLayout>
     </android.support.v7.widget.Toolbar>
 
@@ -59,6 +65,7 @@
             android:background="@color/bg_background"/>
 
         <Button
+            android:id="@+id/btn_go_payment"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@color/purple"
@@ -66,7 +73,7 @@
             android:layout_marginRight="16dp"
             android:layout_marginTop="20dp"
             android:layout_marginBottom="20dp"
-            android:text="@string/detail_room_select"
+            android:text="@string/reservation_ok"
             android:gravity="center"
             android:textColor="@color/white"
             android:textSize="15dp"/>
@@ -84,18 +91,29 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:background="@color/bg_background" />
-
             <include layout="@layout/layout_reservation_hotel" />
 
-            <include layout="@layout/layout_reservation_user_info" />
+            <include android:id="@+id/include_user_info"
+                layout="@layout/layout_reservation_user_info" />
 
             <include layout="@layout/layout_reservation_discount" />
 
             <include layout="@layout/layout_reservation_price" />
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                android:layout_marginTop="15dp">
+
+                <android.support.v4.view.ViewPager
+                    android:id="@+id/pay_pager"
+                    android:layout_width="match_parent"
+                    android:layout_height="75dp"
+                    android:visibility="visible"
+                    android:scaleType="fitXY">
+                </android.support.v4.view.ViewPager>
+            </LinearLayout>
 
             <include layout="@layout/layout_reservation_pay" />
 
