--- a/app/src/main/res/layout/layout_detail_hotel_room_item.xml
+++ b/app/src/main/res/layout/layout_detail_hotel_room_item.xml
@@ -5,6 +5,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:id="@+id/pid"/>
+    <TextView
         android:id="@+id/tv_room_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
