--- a/app/src/main/res/layout/layout_reservation_price.xml
+++ b/app/src/main/res/layout/layout_reservation_price.xml
@@ -46,13 +46,13 @@
             android:text="@string/reservation_price"/>
 
         <TextView
+            android:id="@+id/tv_real_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/blacktxt"
             android:textSize="16dp"
             android:layout_weight="1"
             android:gravity="right"
-            android:text="@string/reservation_price"
             tools:text="363,000원"/>
     </LinearLayout>
 
@@ -81,6 +81,7 @@
             android:text="@string/reservation_discount_price"/>
 
         <TextView
+            android:id="@+id/tv_discount_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/privateview"
@@ -115,6 +116,7 @@
             android:text="@string/reservation_sale_price"/>
 
         <TextView
+            android:id="@+id/tv_total_price"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/blacktxt"
@@ -151,7 +153,10 @@
             android:textSize="12dp"
             android:layout_marginLeft="30dp"
             android:layout_gravity="center"
-            android:padding="3dp"
+            android:paddingTop="2dp"
+            android:paddingBottom="2dp"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
             android:textColor="@color/white"
             android:text="@string/reservation_point"
             android:background="@drawable/point_round"/>
@@ -168,4 +173,56 @@
             tools:text="16,450원 적립 예정(체크아웃 이후 지급)" />
 
     </LinearLayout>
+
+    <TableLayout
+        android:id="@+id/sub_products"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="23dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:visibility="gone"
+        android:background="@drawable/style_edittext_gray_border">
+
+        <TableRow
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#f7f7fa"
+            android:paddingTop="5dp"
+            android:paddingBottom="5dp">
+
+            <TextView
+                android:id="@+id/date"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:textColor="@color/graytxt"
+                android:text="날짜"
+                style="@android:style/TextAppearance.Small"/>
+
+            <TextView
+                android:id="@+id/price"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="판매가"
+                android:textColor="@color/graytxt"
+                style="@android:style/TextAppearance.Small"/>
+
+            <TextView
+                android:id="@+id/breakfast"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:layout_weight="1"
+                android:text="조식"
+                android:textColor="@color/graytxt"
+                style="@android:style/TextAppearance.Small"/>
+        </TableRow>
+
+    </TableLayout>
 </LinearLayout>
