--- a/app/src/main/res/layout/layout_reservation_user_info.xml
+++ b/app/src/main/res/layout/layout_reservation_user_info.xml
@@ -124,17 +124,17 @@
 
                 <Spinner
                     android:id="@+id/pnum1"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_weight=".34"
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:textColor="@color/termtext"
-                    android:background="@drawable/selectbox"
+                    android:background="@drawable/style_edittext_gray_border_gray_bg"
                     android:spinnerMode="dropdown" />
 
                 <EditText
                     android:id="@+id/pnum2"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_weight=".33"
                     android:layout_gravity="right"
@@ -152,7 +152,7 @@
 
                 <EditText
                     android:id="@+id/pnum3"
-                    android:layout_width="0dp"
+                    android:layout_width="match_parent"
                     android:layout_height="35dp"
                     android:layout_weight=".33"
                     android:layout_gravity="right"
@@ -169,6 +169,15 @@
                     tools:text="6210"/>
             </LinearLayout>
         </LinearLayout>
+        <TextView
+            android:id="@+id/tv_auth_change"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="13dp"
+            android:layout_gravity="right"
+            android:layout_marginTop="12dp"
+            android:textColor="@color/purple"
+            android:text="@string/phone_change"/>
     </LinearLayout>
     <!-- 이름, 연락처 비회원 및 인증 안한회원-->
 
@@ -203,7 +212,7 @@
                     android:paddingLeft="3dp"
                     android:textSize="12dp"
                     android:background="@drawable/style_edittext_gray_border_gray_bg"
-                    android:textColor="@color/coupon_dis"/>
+                    android:textColor="@color/blacktxt"/>
 
                 <TextView
                     android:id="@+id/auth_count"
@@ -230,7 +239,7 @@
                 android:layout_toLeftOf="@id/ll_auth_num"
                 android:gravity="center"
                 android:padding="3dp"
-                android:textSize="14dp"
+                android:textSize="12dp"
                 android:layout_marginRight="10dp"
                 android:background="@color/purple"
                 android:textColor="@color/white"/>
